# kiwoom_rest

./: .gitignore  .pre-commit-config.yaml  README.md  api_names_comparison.md  example.py  example_client.py  kiwoom_client.py  kiwoom_client_docs.md  main.py  pyproject.toml  requirements.txt  run.sh  scrape_apis.py  tasks.md  test_app.py
.github/workflows/: ci.yml  publish.yml
examples/: example.py  example_typed.py  example_typed_ws.py  example_ws.py
kiwoom/: client.py  docs.md  typed_api.py
kiwoom_playground/: cli.py  server.py
kiwoom_playground/templates/: index.html
kiwoom_rest/: __init__.py  apis.json  client.py  core.py  docs.md  generated.py  typed_api.py
static/: apis.json
tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008-fix-api-naming.md  TASK-011-update-docs-examples.md  TASK-012.md
templates/: index.html
tools/: check.sh  generate_api_code.py  generate_comparison.py  scrape_apis.py
